<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IRemote</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_remote">IRemote</string>
    <string name="audio_volume">音量</string>
    <string name="channel_switch">選台</string>
    <string name="power">電源</string>
    <string name="source">來源</string>
    <string name="enter">確定</string>
    <string name="d1">1</string>
    <string name="d2">2</string>
    <string name="d3">3</string>
    <string name="d4">4</string>
    <string name="d5">5</string>
    <string name="d6">6</string>
    <string name="d7">7</string>
    <string name="d8">8</string>
    <string name="d9">9</string>
    <string name="d0">0</string>
    <string name="foo"></string>

</resources>