<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="0,1,2,3"
    tools:context=".RemoteActivity" >

    <TableRow
        android:id="@+id/TableRow05"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <Button
            android:id="@+id/digit_1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/d1" 
            android:onClick="onClick"
            style="@style/Button"/>

        <Button
            android:id="@+id/digit_2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/d2"  
            android:onClick="onClick"
            style="@style/Button"/>

        <Button
            android:id="@+id/digit_3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/d3"  
            android:onClick="onClick"
            style="@style/Button"/>

        <Button
            android:id="@+id/power"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/power" 
            android:onClick="onClick"
            style="@style/Button" />
    </TableRow>

    <TableRow
        android:id="@+id/TableRow04"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <Button
            android:id="@+id/digit_4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/d4" 
            android:onClick="onClick"
            style="@style/Button" />

        <Button
            android:id="@+id/digit_5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/d5" 
            android:onClick="onClick" 
            style="@style/Button"/>

        <Button
            android:id="@+id/digit_6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/d6"  
            android:onClick="onClick"
            style="@style/Button"/>

        <Button
            android:id="@+id/source"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/source" 
            android:onClick="onClick" 
            style="@style/Button"/>
    </TableRow>

    <TableRow
        android:id="@+id/TableRow03"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <Button
            android:id="@+id/digit_7"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/d7" 
            android:onClick="onClick"
            style="@style/Button" />

        <Button
            android:id="@+id/digit_8"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/d8"  
            android:onClick="onClick"
            style="@style/Button"/>

        <Button
            android:id="@+id/digit_9"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/d9" 
            android:onClick="onClick"
            style="@style/Button" />

        <Button
            android:id="@+id/enter"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/enter" 
            android:onClick="onClick" 
            style="@style/Button"/>
    </TableRow>

    <TableRow
        android:id="@+id/TableRow02"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1" >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_span="1"
            android:visibility="invisible"
            style="@style/Button"/>
        <Button
            android:id="@+id/digit_0"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/d0" 
            android:layout_span="1" 
            android:onClick="onClick"
            style="@style/Button"/>
    </TableRow>

    <TableRow
        android:id="@+id/TableRow07"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <ImageButton
            android:id="@+id/volume_up"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_span="2"
            android:layout_weight="1"
            android:src="@drawable/up" 
            android:contentDescription="@string/foo" 
            android:onClick="onClick"
            style="@style/Button"/>

        <ImageButton
            android:id="@+id/channel_up"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_column="2"
            android:layout_span="2"
            android:layout_weight="1"
            android:src="@drawable/up"
            android:contentDescription="@string/foo"  
            android:onClick="onClick"
            style="@style/Button"/>

    </TableRow>

    <TableRow
        android:id="@+id/TableRow06"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:gravity="center"
            android:text="@string/audio_volume"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_span="2"
            android:gravity="center"
            android:text="@string/channel_switch"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </TableRow>

    <TableRow
        android:id="@+id/TableRow01"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <ImageButton
            android:id="@+id/volume_down"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_span="2"
            android:layout_weight="1"
            android:src="@drawable/down"
            android:contentDescription="@string/foo" 
            android:onClick="onClick"
            style="@style/Button"/>

        <ImageButton
            android:id="@+id/channel_down"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_column="2"
            android:layout_span="2"
            android:layout_weight="1"
            android:src="@drawable/down"
            android:contentDescription="@string/foo"  
            android:onClick="onClick"
            style="@style/Button"/>

    </TableRow>

</TableLayout>